# esw_ser

./: .gitignore  pom.xml
src/main/avro/: measurements.avdl  measurements.avsc
src/main/cpp/: main.cpp  measurements.pb.cc  measurements.pb.h  meson.build
src/main/java/cz/esw/serialization/: App.java  AppTest.java  DataProducer.java  ResultConsumer.java
src/main/java/cz/esw/serialization/handler/: AvroDataHandler.java  JsonDataHandler.java  ProtoDataHandler.java
src/main/java/cz/esw/serialization/json/: Result.java  pResultChecker.java
src/main/proto/: measurements.proto
src/test/java/cz/esw/serialization/: DataProducerTest.java
